src/objects/PSA_Resource_Practice__c.object
<CustomObject>
    <description>Contains a mapping of Entity and Department to a Practice</description>
    <fields>
        <fullName>PSA_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>PSA_Department__c</referenceTo>
        <relationshipLabel>PSA Resource Practices</relationshipLabel>
        <relationshipName>PSA_Resource_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>PSA_Entity__c</referenceTo>
        <relationshipLabel>PSA Resource Practices</relationshipLabel>
        <relationshipName>PSA_Resource_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>PSA Resource Practices</relationshipLabel>
        <relationshipName>PSA_Resource_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Resource Practice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Department__c</columns>
        <columns>PSA_Entity__c</columns>
        <columns>PSA_Practice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Resource Practice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Resource Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>